--- a/app/assets/stylesheets/Navigation.scss
+++ b/app/assets/stylesheets/Navigation.scss
@@ -4,11 +4,19 @@
   z-index: 100;
   position: fixed !important;
   background-color: $beige;
-  max-width: 1140px !important;
+  max-width: 1133px !important;
   width: 100%;
+  padding-left: 0 !important;
 
   .dropdown-menu {
     left: auto;
     right: 0;
+  }
+}
+
+@media (max-width: 1200px) and (min-width: 992px) {
+  .Navigation {
+    left: 0 !important;
+    padding-left: 40px !important;
   }
 }
